# TTK4145-Prosjekt-AIS

./: .gitignore  .gitmodules  README.md  pdf_py.py
Byrokratiet_i_tokio_ny/: Cargo.toml
Byrokratiet_i_tokio_ny/src/: config.rs  lib.rs  main.rs
Byrokratiet_i_tokio_ny/src/Byrokrati/: IT_Roger.rs  MrWorldWide.rs  PostNord.rs  Sjefen.rs  konsulent.rs
Byrokratiet_i_tokio_ny/src/WorldView/: WorldView.rs  WorldViewChannel.rs
Byrokritiet_i_tokio/: Cargo.toml  README.md  process_log.csv
Byrokritiet_i_tokio/src/: config.rs  lib.rs  main.rs
Byrokritiet_i_tokio/src/Byrokrati/: IT_Roger.rs  MrWorldWide.rs  PostNord.rs  Sjefen.rs  Tony.rs  Vara.rs  konsulent.rs
Flowcharts/: .$$elevatorpro.drawio.bkp.drawio.bkp  Thumbs.db
PeerReview/: 0c25976e.md  3701d923.md  975af7d1.md  dbca849d.md  pdf_py.py  peer-review-25.txt
PeerReview/0c25976e/elevator_pro/: Cargo.toml  README.md  cargo_ny.txt
PeerReview/0c25976e/elevator_pro/Flowcharts/: update_wv .drawio
PeerReview/0c25976e/elevator_pro/src/: TODO.md  config.rs  init.rs  main.rs  utils.rs
PeerReview/0c25976e/elevator_pro/src/elevator_logic/: task_handler.rs
PeerReview/0c25976e/elevator_pro/src/elevator_logic/master/: task_allocater.rs  wv_from_slaves.rs
PeerReview/0c25976e/elevator_pro/src/elevio/: poll.rs
PeerReview/0c25976e/elevator_pro/src/network/: local_network.rs  tcp_self_elevator.rs  udp_broadcast.rs
PeerReview/0c25976e/elevator_pro/src/world_view/: world_view.rs  world_view_update.rs
PeerReview/dbca849d/snapshot-[REDACTED]/main/: Dockerfile  README.md  docker-compose.yaml  entrypoint.sh
PeerReview/dbca849d/snapshot-[REDACTED]/main/src/: alarm.rs  config.rs  controller.rs  fsm.rs  lights.rs  main.rs  manager.rs  messages.rs  receiver.rs  sender.rs
SSH_RUST/: Cargo.toml  config.txt
SSH_RUST/src/: main.rs
Worldview_test/: Cargo.toml
Worldview_test/src/: main.rs
elevator_pro/: Cargo.toml  README.md  README_norsk.md
elevator_pro/Flowcharts/: Nettverk.drawio
elevator_pro/network/: local_network.rs  task_allocater.rs  udp_broadcast.rs
elevator_pro/src/: TODO.md  config.rs  init.rs  lib.rs  main.rs  utils.rs
elevator_pro/src/backup/: backup.rs
elevator_pro/src/elevator_logic/: task_handler.rs
elevator_pro/src/elevator_logic/master/: task_allocater.rs  update_from_slave.rs  wv_from_slaves.rs
elevator_pro/src/elevator_logic/slave/: update_from_master.rs
elevator_pro/src/elevio/: elev.rs  poll.rs
elevator_pro/src/manager/: task_allocator.rs
elevator_pro/src/network/: local_network.rs  tcp_network.rs  tcp_self_elevator.rs  udp_broadcast.rs
elevator_pro/src/world_view/: world_view.rs  world_view_ch.rs  world_view_update.rs
elevator_pro_rebrand/: Cargo.toml  README.md  checkList.md  fat.md  peer_review.txt
elevator_pro_rebrand/Flowcharts/: $elevatorpro.drawio.bkp.drawio  .$$elevatorpro.drawio.bkp.drawio.bkp  .$elevatorpro.drawio.bkp  elevatorpro.drawio
elevator_pro_rebrand/libs/Project_resources/cost_fns/hall_request_assigner/: build.sh  hall_request_assigner
elevator_pro_rebrand/libs/Project_resources/cost_fns/hall_request_assigner/d-json/: .gitignore
elevator_pro_rebrand/libs/Project_resources/elev_algo/: ttk4145demoelevator
elevator_pro_rebrand/libs/Project_resources/packet_loss/: netimpair  netimpair.d
elevator_pro_rebrand/src/: TODO.md  backup.rs  config.rs  init.rs  ip_help_functions.rs  lib.rs  main.rs  print.rs  utils.rs  world_view.rs
elevator_pro_rebrand/src/backup/: backup.rs  mod.rs
elevator_pro_rebrand/src/elevator_logic/: fsm.rs  lights.rs  mod.rs  request.rs  self_elevator.rs  task_handler.rs  timer.rs
elevator_pro_rebrand/src/elevator_logic/master/: wv_from_slaves.rs
elevator_pro_rebrand/src/elevio/: elev.rs  mod.rs  poll.rs
elevator_pro_rebrand/src/manager/: json_serial.rs  mod.rs  task_allocator.rs
elevator_pro_rebrand/src/network/: local_network.rs  mod.rs  status.rs  tcp_network.rs  tcp_self_elevator.rs  udp_broadcast.rs  udp_direct.rs  udp_net.rs  udp_network.rs
elevator_pro_rebrand/src/network/local_network/: mod.rs  update_wv.rs
elevator_pro_rebrand/src/world_view/: mod.rs  serial.rs  world_view.rs  world_view_ch.rs  world_view_update.rs
pic/: Thumbs.db
src/: init.rs  ip_help_functions.rs  main.rs
src/elevator_logic/: fsm.rs  lights.rs  self_elevator.rs  timer.rs
src/elevio/: poll.rs
src/manager/: json_serial.rs
src/network/: mod.rs  udp_direct.rs
src/network/local_network/: mod.rs  update_wv.rs
