[package]
name = "Byrokratiet_i_tokio_ny"
version = "0.1.0"
edition = "2021"

[dependencies]
driver-rust = { git = "https://github.com/TTK4145/driver-rust", tag = "v0.1.0" }
crossbeam-channel = "0.5" #ikkje gløym denne
tokio = {version = "1", features = ["full"]}
socket2 = "0.4"
local-ip-address = "0.5"
get_if_addrs = "0.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
futures = "0.3"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"


[lib]
path = "src/lib.rs"
