[package]
name = "elevatorpro" #navn til crate to crates.io
version = "0.0.4" #version nummer, må endres hver gang man oppdaterer docs og kode. Pass på å kjøre cargo doc og cargo update før cargo publish
edition = "2021"
authors = ["Ravn Erik Budde", "Adrian Valaker Eikeland"]
readme = "README.md"
documentation = "https://docs.rs/elevatorpro"
description = "TTK4145 Real-time Programming elevator project, Group 25, spring 2025"
repository = "https://github.com/Adriaeik/TTK4145-Prosjekt-AIS"
license-file = "LICENSE.txt"

[dependencies]
crossbeam-channel = "0.5" #ikkje gløym denne
tokio = {version = "1", features = ["full"]} #bytt denne til det vi faktisk bruker så doc ikke blir mega
serde = { version = "1.0", features = ["derive"] } #samme her, sikkert på samtlige nedover her og
serde_json = "1.0"
socket2 = "0.5.8"
local-ip-address = "0.6.3"
get_if_addrs = "0.5"
bincode = "1.3"
futures = "0.3"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.6"
termcolor = "1.2"
ansi_term = "0.12"
prettytable-rs = "0.10"
once_cell = "1.19"


[lib]
path = "src/lib.rs"
