[package]
name = "elevatorpro" #navn til crate to crates.io
version = "0.0.6" #version nummer, må endres hver gang man oppdaterer docs og kode. Pass på å kjøre cargo doc og cargo update før cargo publish
edition = "2021"
authors = ["Ravn Erik Budde", "Adrian Valaker Eikeland"]
readme = "README.md"
documentation = "https://docs.rs/elevatorpro"
description = "TTK4145 Real-time Programming elevator project, Group 25, spring 2025"
repository = "https://github.com/Adriaeik/TTK4145-Prosjekt-AIS"
license-file = "LICENSE.txt"
keywords = ["elevator", "real-time", "tokio", "ttk4145"]
categories = ["asynchronous", "network-programming"]

[dependencies]
# Kanal for kommunikasjon mellom trådar (brukes i I/O og elevator logic)
crossbeam-channel = "0.5"

# Async runtime. Used  brukt til task-spawning, sleep, process m.m.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt", "net", "process", "sync", "time", "io-util"] }

# Serialisering og deserialisering av worldview og meldingar
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # Brukast kanskje berre for debugging, men ok å ha med
bincode = "1.3"    # Brukast til effektiv serialisering av worldview

# Nettverksrelaterte ting
socket2 = "0.5.8" # For avansert UDP-socket config (brukes i init og backup)
local-ip-address = "0.6.3" # For å hente lokal IP for identifikasjon
# get_if_addrs = "0.5" # Ser ikkje ut til å vere brukt direkte – vurdér å fjerne

# Feilhåndtering
anyhow = "1.0"

# Futures brukt i async systemet (tokio)
futures = "0.3"

# Farge og terminalutskrift
ansi_term = "0.12" # Brukast til fargede overskrifter og status-tekst i worldview

# Tabellformat for worldview-utskrift
prettytable-rs = "0.10"

# Globalt init (for mutex på konfig-booleanar)
once_cell = "1.19"

# For korrekt bredde-handtering i terminal (brukes i `pad_text`)
unicode-width = "0.1"

[lib]
path = "src/lib.rs"
