[package]
name = "elevatorpro" #navn til crate to crates.io
version = "0.1.0" #version nummer, må endres hver gang man oppdaterer docs og kode. Pass på å kjøre cargo doc og cargo update før cargo publish
edition = "2021"
authors = ["Ravn Erik Budde", "Adrian Valaker Eikeland"]
readme = "README.md"
documentation = "https://docs.rs/elevatorpro"
description = "TTK4145 Real-time Programming elevator project, Group 25, spring 2025"
repository = "https://github.com/Adriaeik/TTK4145-Prosjekt-AIS"
license-file = "LICENSE.txt"
keywords = ["elevator", "real-time", "tokio", "ttk4145"]
categories = ["asynchronous", "network-programming"]

[dependencies]
# Used for communication between threads (used in the local_elevator)
crossbeam-channel = "0.5"

# Async runtime. Used for e.g. task-spawning, sleep, process...
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt", "net", "process", "sync", "time", "io-util"] }

# Serialization and deserialization. Used when sending messages over the network, and passing inputs to the hall assigner script
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"      
bincode = "1.3"                  # Used for more effective (de)serialization of messages sent on the network

# Network-related stuff
socket2 = "0.5.8"               # For more complex socket-tuning when setting up UPD and TCP sockets
local-ip-address = "0.6.3"      # For finding the local IP address

# Terminal printing
ansi_term = "0.12"              # Used to paint term prints
prettytable-rs = "0.10"         # Used for making tables in the worldview print
unicode-width = "0.1"           # Used to get correct width-handling in the terminal

# Lazy
once_cell = "1.19"              # Used to configure Lazy Mutex for print conditions

[lib]
path = "src/lib.rs"
